--- a/package.json
+++ b/package.json
@@ -9,14 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.3",
+    "@prisma/client": "^4.7.1",
+
     "@types/node": "18.11.10",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "clsx": "^1.2.1",
+    "dayjs": "^1.11.4",
+    "socket.io": "^4.5.1",
+    "socket.io-client": "^4.5.1",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "next": "13.0.6",
+    "next-auth": "^4.18.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.3"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "prisma": "^4.7.1",
+    "tailwindcss": "^3.2.4",
+    "postcss": "^8.4.14",
+    "prettier": "^2.7.1",
+    "prettier-plugin-prisma": "^3.14.0",
+    "prettier-plugin-tailwindcss": "^0.1.12"
   }
 }
