--- a/package.json
+++ b/package.json
@@ -11,29 +11,32 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "^4.7.1",
-
     "@types/node": "18.11.10",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "clsx": "^1.2.1",
     "dayjs": "^1.11.4",
-    "socket.io": "^4.5.1",
-    "socket.io-client": "^4.5.1",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
+    "hamburger-react": "^2.5.0",
     "next": "13.0.6",
     "next-auth": "^4.18.0",
+    "nodemailer": "^6.8.0",
+    "poro": "^2.1.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "socket.io": "^4.5.1",
+    "socket.io-client": "^4.5.1",
     "typescript": "4.9.3"
   },
   "devDependencies": {
+    "@types/nodemailer": "^6.4.6",
     "autoprefixer": "^10.4.13",
-    "prisma": "^4.7.1",
-    "tailwindcss": "^3.2.4",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "prettier-plugin-prisma": "^3.14.0",
-    "prettier-plugin-tailwindcss": "^0.1.12"
+    "prettier-plugin-tailwindcss": "^0.1.12",
+    "prisma": "^4.7.1",
+    "tailwindcss": "^3.2.4"
   }
 }
