--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@
 
 <!-- PLANETSCALE CREDS -->
 
-DATABASE_URL='mysql://wordpresstest:wordpresstest@localhost:3306/lolfantasy'
+DATABASE_URL='sqlserver://splitscrn.database.windows.net:1433;database=lolfantasy;user=nasTech@splitscrn;password=kahudaa@8732;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;'
 
 <!-- BRYCPT ENV -->
 
